# my-ai-maker

./: LICENSE  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: validate.yaml  validate_generator.yaml
app/: .gitignore  Dockerfile  README  README.md  config.yaml  go.mod  go.sum  main.go  makefile  server.go
app/api/: api.go
app/cmd/: endpoints.go  main.go
app/handlers/: auth.go  endpoints.go  process.go
app/middleware/: jwtMiddleware.go
app/models/: result.go
app/sample/: sample.csv
app/utils/: csv.go  http.go
client/: .eslintrc.cjs  .gitignore  README.md  create-env.sh  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vercel.json
client/prisma/: schema.prisma
client/public/: index.html  manifest.json
client/src/: App.js  Public.jsx  RequireAuth.js  index.css  index.js  middleware.ts
database/: Model.sql  README.md  Session.sql  VerificationToken.sql  init.sh
deprecated_client/: package.json
deprecated_client/public/: index.html  sample.csv
model/: api.py  main.py  test.py  train.py
model/src/: linear_regression.py  logistic_regression.py  neural.py
model/utils/: utils.py
models/: .gitignore  main.py  makefile  pyproject.toml  readme.md  test.py  train.py
models/api/models/: __init__.py  response.py
models/endpoints/: __init__.py  endpoints.py
models/exceptions/: __init__.py  api.py
models/src/: linear_regression.py  logistic_regression.py
models/static_validation/: __init__.py
models/utils/: __init__.py  utils.py
next_client/client/: package-lock.json  (+1 more)
(+184 files in other folders)
